상단 검색 form을 구글 검색창으로 넘어가게 변경

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -12,10 +12,10 @@
         </ul>
 
         <!-- Add search form here -->
-        <form class="my-2 my-lg-0">
+        <form class="my-2 my-lg-0" method="get" action="http://www.google.co.kr/search" target="_blank">
           <div class="row">
             <div class="col pe-1">
-              <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+              <input name="q" class="form-control" value="" type="search" placeholder="Search" aria-label="Search">
             </div>
             <div class="col-auto ps-0 me-3">
               <button class="btn btn-outline-success" type="submit">Search</button>
