--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,3 +1,12 @@
+<!--
+-------------------------------------------------------------
+||    ||  ||||||||    |||     ||||     ||||||||   ||||||
+||    ||  ||         || ||    ||  ||   ||         ||   ||
+||||||||  ||||||||   |||||    ||   ||  ||||||||   ||||||
+||    ||  ||        ||   ||   ||  ||   ||         ||   ||
+||    ||  ||||||||  ||   ||   ||||     ||||||||   ||    ||
+--------------------------------------------------------------
+-->
 <div th:fragment="header">
   <nav class="navbar navbar-expand-lg border-bottom">
     <a class="navbar-brand px-2 mx-2" href="#" th:href="@{/}">My App</a>
@@ -63,6 +72,14 @@
 </div>
 
 
+<!------------------------------------------------------------
+FFFFFF     OOO      OOO     TTTTTTTT  EEEEEEEE  RRRRRR
+F         OO OO    OO OO       TT     EE        RR   RR
+FFFFFF   OO   OO  OO   OO      TT     EEEEEEEE  RR RRR
+F         OO OO    OO OO       TT     EE        RR  RRR
+F          OOO      OOO        TT     EEEEEEEE  RR   RRR
+------------------------------------------------------------->
+
 <!-- Other code -->
 
 
@@ -87,15 +104,30 @@
   </footer>
 </div>
 
+<!-------------------------------------------------
+부트스트랩 CSS 5.3.1 링크 icon 포함
+
+
+--------------------------------------------------->
 <div th:fragment="linkCSS">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
 </div>
 
+<!--------------------------------------------------
+부트스트랩 JS 5.3.1 링크
+
+
+---------------------------------------------------->
 <div th:fragment="linkJS">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </div>
 
+
+<!--------------------------------------------------
+커뮤니티 게시판 부분
+
+---------------------------------------------------->
 <div th:fragment="community_main_post">
   <div class="col-sm-5 w-auto p-3">
     <ul th:each="boardC : ${community}" class="py-1 list-unstyled mb-1">
@@ -183,6 +215,11 @@
   </div>
 </div>
 
+
+<!--------------------------------------------------
+질문 게시판 부분
+
+---------------------------------------------------->
 <div th:fragment="questions_main_post">
   <div class="col-sm-5 w-auto p-3">
     <ul th:each="boardQ : ${questions}" class="py-1 list-unstyled mb-1">
@@ -270,6 +307,11 @@
   </div>
 </div>
 
+
+<!--------------------------------------------------
+공지 게시판 부분
+
+---------------------------------------------------->
 <div th:fragment="notice_main_post">
   <div class="col-md-5 w-auto p-3">
     <ul th:each="boardN : ${notice}" class="py-1 list-unstyled mb-1">
@@ -357,6 +399,11 @@
   </div>
 </div>
 
+
+<!--------------------------------------------------
+잡지식 게시판 부분
+
+---------------------------------------------------->
 <div th:fragment="knowledge_main_post">
   <div class="col-md-5 w-auto p-3">
     <ul th:each="boardKN : ${knowledge}" class="py-1 list-unstyled mb-1">
@@ -444,18 +491,25 @@
   </div>
 </div>
 
+<!--------------------------------------------------
+프로필에서 내 게시글 눌르면 나오는 거
 
+---------------------------------------------------->
 <div th:fragment="profile_my_board">
   <div class="container w-75">
   <hr/>
-    <ol class="list-group list-group-numbered">
-      <li th:each="board : ${paging}" class="list-group-item d-flex justify-content-between align-items-start">
-        <div class="ms-2 me-auto">
-          <div class="fw-bold" th:text="${board.getTitle}"></div>
+    <ul class="list-group">
+      <li th:each="board, stat : ${paging}" class="list-group-item d-flex justify-content-between align-items-start">
+        <div class="ms-2">
+          <a href="" th:href="@{|/${board.getCategory()}/${board.getBid()}|}" class="link-dark link-underline-opacity-0
+            link-underline-opacity-50-hover">
+            <!-- index 번호 붙이는 거 : 총 게시글 수 - 현재 페이지 index - 10 * 몇 번째 페이지 -->
+            <span th:text="${paging.getTotalElements() - stat.index - 10 * paging.getNumber()} + '. '"></span>
+            <span class="fw-bold" th:text="${board.getTitle}"></span>
+          </a>
         </div>
         <div class="d-flex">
-          <div class="collapse navbar-collapse">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="nav mb-2 mb-lg-0">
               <li class="nav-item">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" style="width: 20px; height: 20px;" class="h-5 w-5 me-1">
                   <!-- 아이콘 경로 -->
@@ -468,12 +522,10 @@
                 <span class="sr-only"></span>
               </li>
             </ul>
-          </div>
 
           <!-- 댓글 수 -->
           <div class="d-flex">
-            <div class="collapse navbar-collapse">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <ul class="nav mb-2 mb-lg-0">
                 <li class="nav-item">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" style="width: 20px; height: 20px;" class="h-5 w-5 me-1">
                     <!-- 아이콘 경로 -->
@@ -485,13 +537,11 @@
                   <span class="sr-only"></span>
                 </li>
               </ul>
-            </div>
           </div>
 
           <!-- 좋아요 수 -->
           <div class="d-flex">
-            <div class="collapse navbar-collapse">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <ul class="nav mb-2 mb-lg-0">
                 <li class="nav-item">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" stroke-width="0.3" stroke="currentColor" aria-hidden="true" viewBox="-3 -3 14 24" style="width: 22px; height: 22px;" class="h-5 w-5 me-1">
                     <path d="M8.864.046C7.908-.193 7.02.53 6.956 1.466c-.072 1.051-.23 2.016-.428 2.59-.125.36-.479 1.013-1.04 1.639-.557.623-1.282 1.178-2.131 1.41C2.685 7.288 2 7.87 2 8.72v4.001c0 .845.682 1.464 1.448 1.545 1.07.114 1.564.415 2.068.723l.048.03c.272.165.578.348.97.484.397.136.861.217 1.466.217h3.5c.937 0 1.599-.477 1.934-1.064a1.86 1.86 0 0 0 .254-.912c0-.152-.023-.312-.077-.464.201-.263.38-.578.488-.901.11-.33.172-.762.004-1.149.069-.13.12-.269.159-.403.077-.27.113-.568.113-.857 0-.288-.036-.585-.113-.856a2.144 2.144 0 0 0-.138-.362 1.9 1.9 0 0 0 .234-1.734c-.206-.592-.682-1.1-1.2-1.272-.847-.282-1.803-.276-2.516-.211a9.84 9.84 0 0 0-.443.05 9.365 9.365 0 0 0-.062-4.509A1.38 1.38 0 0 0 9.125.111L8.864.046zM11.5 14.721H8c-.51 0-.863-.069-1.14-.164-.281-.097-.506-.228-.776-.393l-.04-.024c-.555-.339-1.198-.731-2.49-.868-.333-.036-.554-.29-.554-.55V8.72c0-.254.226-.543.62-.65 1.095-.3 1.977-.996 2.614-1.708.635-.71 1.064-1.475 1.238-1.978.243-.7.407-1.768.482-2.85.025-.362.36-.594.667-.518l.262.066c.16.04.258.143.288.255a8.34 8.34 0 0 1-.145 4.725.5.5 0 0 0 .595.644l.003-.001.014-.003.058-.014a8.908 8.908 0 0 1 1.036-.157c.663-.06 1.457-.054 2.11.164.175.058.45.3.57.65.107.308.087.67-.266 1.022l-.353.353.353.354c.043.043.105.141.154.315.048.167.075.37.075.581 0 .212-.027.414-.075.582-.05.174-.111.272-.154.315l-.353.353.353.354c.047.047.109.177.005.488a2.224 2.224 0 0 1-.505.805l-.353.353.353.354c.006.005.041.05.041.17a.866.866 0 0 1-.121.416c-.165.288-.503.56-1.066.56z"/>
@@ -502,11 +552,10 @@
                   <span class="sr-only"></span>
                 </li>
               </ul>
-            </div>
           </div>
         </div>
       </li>
-    </ol>
+    </ul>
   </div>
   <!-- 페이징 처리 시작 -->
   <div th:if="${!paging.isEmpty()}">
