--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -492,10 +492,10 @@ F          OOO      OOO        TT     EEEEEEEE  RR   RRR
 </div>
 
 <!--------------------------------------------------
-프로필에서 내 게시글 눌르면 나오는 거
+프로필에서 내 게시글 같은 버튼 눌르면 나오는 거
 
 ---------------------------------------------------->
-<div th:fragment="profile_my_board">
+<div th:fragment="profile_get_data">
   <div class="container w-75">
   <hr/>
     <ul class="list-group">
